# SEPA-Validator

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
Reference/: Anhang1 zu Anlage 3 - Datenformatstandards-V 3.8 FinalVersion-2024-04-08.xlsx  Anlage_3_Datenformate_V3.9.pdf:Zone.Identifier  Anlage_3_Datenformate_V3.9mAE.pdf:Zone.Identifier
analysis/: cleanup_actions.md  cleanup_manifest.csv  cleanup_target_structure.md  duplicate_report.md  duplicate_report_after_cleanup.md  inbox_20260323_TWL_SEPA_DD_LTWL.md  inbox_check_20260316_225559.md  rename_xml_company_20260211_223029.csv  rename_xml_latest.csv  validation_20260211_222554.csv  validation_20260316_225421.csv  validation_20260323_204101.csv  validation_20260323_204251.csv  xml_validation_report.csv  xml_validation_report.md
app/: README.md  package-lock.json  package.json  vite.config.ts
app/src/: App.svelte  app.css  main.ts
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  formatting.rs  lib.rs  model.rs  payments.rs  scanner.rs  schema.rs  validator.rs
app/src-tauri/tests/: spike.rs
scripts/: gen_icon.py  rename_xml_by_date_company_format.sh  rename_xml_by_schema.sh  validate.sh  validate_all.sh
to_check/invalid/: 20241016_DOCMORRIS_N_V_PAIN00800108.xml  20250123_BRS_BIOENERGIE_GMBH_PAIN00800108.xml  UP_Payment_Media_F.xml  (+4 more)
windows/: SEPA-Validator.cmd  SEPA-Validator.ps1  build.ps1  setup.cmd
xml_schema/: camt.054.001.08.xsd  pain.002.001.10.xsd  pain.007.001.09_GBIC_5.xsd
(+59 files in other folders)
